# Tether

./: .gitignore  .swiftlint.yml  CODESTYLE.md  CONTRIBUTING.md  LICENSE  README.md
.github/releases/: v1.7.md
.github/workflows/: ci.yml  release.yml
Tether Workbench Redesign/: .thumbnail  CLAUDE.md  Tether Workbench.dc.html
archive/old-web/: index.html
docs/adr/: 0001-modular-monolith.md  0002-trait-based-service-boundaries.md  0003-async-trace-ingestion.md  0004-openapi-as-dto-source-of-truth.md  0005-observability-and-validation.md  README.md
docs/api/: README.md  openapi.json
docs/architecture/: 01-current-state.md  02-target-architecture.md  03-service-catalog.md  04-code-organization.md  05-documentation-strategy.md  06-migration-plan.md  07-observability-validation.md  README.md
docs/design/: keychain-key-injection.md
docs/releases/: v1.5.0.md  v1.6.1.md
docs/runbooks/: ci-cd.md  releases.md
example/: AgentTrace.html
example/agenttrace/: app.jsx  components.jsx  data.jsx  styles.css
proxy/: .env.example  Cargo.toml
proxy/crates/loom-cache/: README.md
proxy/crates/loom-cache/src/: lib.rs
proxy/crates/loom-crypto/: Cargo.toml  README.md
proxy/crates/loom-domain/: Cargo.toml  README.md
proxy/crates/loom-domain/src/: lib.rs
proxy/crates/tether-cache/: Cargo.toml  README.md
proxy/crates/tether-cache/src/: lib.rs
proxy/crates/tether-crypto/: Cargo.toml  README.md
proxy/crates/tether-crypto/src/: lib.rs
proxy/crates/tether-domain/: Cargo.toml  README.md
proxy/crates/tether-domain/src/: lib.rs
proxy/migrations/: 20260530000000_auth_settings.sql
proxy/sqlite_migrations/: 20260601000000_sessions.sql  20260616000000_session_history.sql
proxy/src/: actions.rs  api_docs.rs  context.rs  crypto.rs  diagnostics.rs  error.rs  logging.rs  main.rs  pricing.rs  providers.rs  settings.rs  trace.rs  workspace.rs
proxy/src/auth/: context.rs  extractor.rs  google.rs  jwt.rs  mod.rs  oauth.rs  password.rs  routes.rs  types.rs
proxy/src/gateway/: credentials.rs  http.rs  mod.rs  relay.rs  stream.rs
proxy/src/settings/: app.rs  cometapi.rs  keys.rs  mod.rs  profile.rs  types.rs  validation.rs
proxy/src/trace/: capture.rs  capture_extract.rs  cost.rs  ingest.rs  mod.rs  node.rs  query.rs  query_tests.rs  replay.rs  replay_headers.rs  replay_store.rs  replay_types.rs  replay_with.rs  retention.rs  routes.rs  schema.rs  sessions.rs  store.rs  store_insert.rs  store_row.rs  summarize.rs  summarize_tests.rs  text.rs
scripts/: check-file-size.sh  file-size-allowlist.txt  package-dmg.sh  package-linux.sh  smoke-e2e.sh
ui/: Package.resolved  Package.swift
ui/Loom/: ContentView.swift  Item.swift  LoomApp.swift
ui/Loom.xcodeproj/: project.pbxproj
ui/Tether/: ContentView.swift  TetherApp.swift
ui/Tether.xcodeproj/: project.pbxproj
web/: README.md  package-lock.json  package.json  tsconfig.test.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
web/components/: CodeBlock.tsx  (+9 more)
(+245 files in other folders)
